ejs spacing, preview fix

--- a/quarto-style.scss
+++ b/quarto-style.scss
@@ -654,6 +654,12 @@ header.headroom {
   margin-top: 5rem !important;
   margin-bottom: 5rem !important;
 }
+.mt-6 {
+  margin-top: 5rem !important;
+}
+.mb-6 {
+  margin-bottom: 5rem !important;
+}
 
 // background colors (primarily for sections)
 
